# dpp-duckdb-processing-persistence

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
jobs/python/: funcional.py  functional.ipynb  functional.py  oriented.ipynb
jobs/python/.ipynb_checkpoints/: funcional-checkpoint.ipynb
sql/: create-table.sql
src/etl/: collector.ipynb  collector.py  functional.ipynb  oriented.ipynb
src/python/: oriented.ipynb
